solved day 9